--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,21 +2,24 @@
 
 <h1>Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div data-controller='endless'>
+  <table>
+    <thead>
+      <tr>
+        <th>Content</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
 
-  <tbody id="posts" data-controller="endless">
-    <%= render @posts %>
-  </tbody>
-</table>
+    <tbody id="posts">
+      <%= render @posts %>
+    </tbody>
+  </table>
 
-<div class="loading_message"></div>
-<%= will_paginate @posts %>
+  <button data-action='click->endless#gotop'>go to Top</button>
+
+  <%= will_paginate @posts %>
+</div>  
 <br>
 
 <%= link_to 'New Post', new_post_path %>
