--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,7 +16,7 @@
     </tbody>
   </table>
 
-  <button data-action='click->endless#gotop'>go to Top</button>
+  <button id='gotop' data-action='click->endless#gotop'>go to Top</button>
 
   <%= will_paginate @posts %>
 </div>  
