--- a/app/views/posts/index.js.erb
+++ b/app/views/posts/index.js.erb
@@ -6,5 +6,6 @@ console.log("rendered page <%= @posts.current_page %>");
   $('.pagination').replaceWith('<%= j will_paginate(@posts) %>');
   $(".pagination").hide();
 <% else %>
+  $("#gotop").show();
   $('.pagination').remove();
 <% end %>
